Fix Social Email Sharing

--- a/force-app/main/default/classes/ShareModalController.cls
+++ b/force-app/main/default/classes/ShareModalController.cls
@@ -4,11 +4,16 @@
 public without sharing class ShareModalController {
 
     @AuraEnabled
-    public static void sendEmail(String whatId, String fromId, String email) {
-        try{
-            if(fromId == null)fromId = CommunityService.getUserContact().Id;
-            SendEmailTemplate.sendShareEmail(whatId, fromId, email);
-        }catch (Exception e){
+    public static void sendEmail(String whatId, String fromId, String email, String emailType) {
+        try {
+            if (fromId == null)fromId = CommunityService.getUserContact().Id;
+            if (emailType == 'SOCIAL_SHARING') {
+                SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Social_Study_Template');
+            } else {
+                SendEmailTemplate.sendShareEmail(whatId, fromId, email, null);
+            }
+
+        } catch (Exception e) {
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
         }
     }
