Fix 0 miles distance

--- a/force-app/main/default/classes/StudyDetailItem.cls
+++ b/force-app/main/default/classes/StudyDetailItem.cls
@@ -32,6 +32,10 @@ public class StudyDetailItem implements Comparable {
                 }
             } else if (compareItem.sites.isEmpty()) {
                 return -1;
+            } else if (this.sites[0].distance == null) {
+                return 1;
+            } else if (compareItem.sites[0].distance == null) {
+                return -1;
             } else {
                 return (Integer) (this.sites[0].distance - compareItem.sites[0].distance);
             }
