--- a/force-app/main/default/classes/RRProfileController.cls
+++ b/force-app/main/default/classes/RRProfileController.cls
@@ -24,7 +24,7 @@ public without sharing class RRProfileController {
             result.participantName = participantForCurrentUser[0].First_Name__c + ' ' + participantForCurrentUser[0].Last_Name__c;
         }
 
-        result.isDelegate = ParticipantService.getParticipantState().isDelegate;
+        result.isDelegate = PatientDelegateService.getInstance().isDelegate();
         return JSON.serialize(result);
     }
 
